# CMakeStudy

./: .gitignore  CMakeLists.txt  qtcomp.cmake
Button/: CMakeLists.txt
Button/src/: CustomButton.cpp  CustomButton.h  custombutton_global.h
LibTester/: CMakeLists.txt
LibTester/src/: QtWidgetClass.cpp  QtWidgetClass.h  QtWidgetClass.ui  main.cpp
TestCmakeLinkTripartiteLib/: CMakeLists.txt
TestCmakeLinkTripartiteLib/cmake/: findLocalLibs.cmake
TestCmakeLinkTripartiteLib/src/: TestCmakeLinkTripartiteLib.cpp  TestCmakeLinkTripartiteLib.h  TestCmakeLinkTripartiteLib.ui  main.cpp
cmake/: VersionInfo.rc.in  install.cmake  productinfo.cmake  src.cmake
